# vimal

./: CMakeLists.txt  README.md  version.h.in
src/: main.cpp
src/vimal/: error.cpp  error.h  error.hpp  location.h  log.cpp  log.h  log.hpp  string.h  string.hpp
